--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
 attrs==21.2.0
-certifi==2021.5.30
-chardet==4.0.0
-click==8.0.1
-CMRESHandler2==2.0.4
-elasticsearch==7.13.1
-idna==2.10
-jsonschema==3.2.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
+click==8.0.3
+CMRESHandler2==2.0.8
+elasticsearch==7.15.1
+idna==3.3
+jsonschema==4.1.2
 loguru==0.5.3
 notifiers==1.2.1
-pyrsistent==0.17.3
-requests==2.25.1
+pyrsistent==0.18.0
+requests==2.26.0
 rfc3987==1.3.8
-six==1.16.0
-urllib3==1.26.5
+urllib3==1.26.7
